# cycleto-events-ical

./: .pre-commit-config.yaml  .python-version  README.md  dates.ical  dates.ics  dates.json  pyproject.toml  requirements.txt  run.sh  scrapy.cfg
.github/workflows/: scrape.yaml  test.yaml
cycleto/: exporters.py  items.py  middleware.py  middlewares.py  pipelines.py  settings.py
cycleto/spiders/: events.py
