[project]
name = "cycleto-events-ical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=36.0.1",
    "datauri==1.0.0",
    "icalendar>=6.1.1",
    "pip>=21.3.1",
    "pytz>=2025.1",
    "scrapy>=2.14.1",
    "scrapy-playwright==0.0.46",
]

