[project]
name = "cycleto-events-ical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=36.0.1",
    "icalendar>=6.1.1",
    "pip>=21.3.1",
    "pytz>=2025.1",
    "scrapy>=2.14.1",
    "waybackpy>=3.0.6",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
warn_return_any = true
disallow_untyped_defs = true

files = "cycleto/**.py"
exclude = "test*.py"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-icalendar>=6.3.2.20251222",
]


[tool.ruff]
line-length = 180
fix = false

[tool.ruff.format]
quote-style = "preserve"  # existing quotes are fine
